# EvaseAnalysis

./: .buildinfo  .gitignore  README.md  evase.depanalyze.html  evase.exceptions.html  evase.html  evase.sql_injection.html  evase.structures.html  evase.util.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  evase.depanalyze.doctree  evase.doctree  evase.exceptions.doctree  evase.sql_injection.doctree  evase.structures.doctree  evase.util.doctree  index.doctree  modules.doctree
.github/workflows/: ci_tests.yml  deploy_docs.yml
_modules/: index.html
_modules/evase/depanalyze/: codetraversalnode.html  importresolver.html  scoperesolver.html  searching.html  surfacedetector.html
_modules/evase/exceptions/: exceptions.html
_modules/evase/sql_injection/: injectionutil.html  injectionvisitor.html  vulnerabletraversal.html
_modules/evase/structures/: analysisperformer.html  modulestructure.html  projectstructure.html
_modules/evase/util/: fileutil.html  logger.html
_sources/: evase.depanalyze.rst.txt  evase.structures.rst.txt  evase.util.rst.txt  index.rst.txt
docs/: conf.py  evase.depanalyze.rst  evase.exceptions.rst  evase.rst  evase.sql_injection.rst  evase.structures.rst  index.rst  modules.rst
evase/depanalyze/: codetraversalnode.py  functioncallfinder.py  importresolver.py  node.py  scoperesolver.py  searching.py  searchingTest.py  surfacedetector.py  typing_visitor.py
evase/exceptions/: exceptions.py
evase/sql_injection/: injectionutil.py  injectionvisitor.py  vulnerabletraversal.py
evase/structures/: analysisperformer.py  modulestructure.py  projectstructure.py
evase/typing/: AssignmentCall.py  typing_visitor.py  typingutil.py
evase/util/: fileutil.py  logger.py
tests/: test_analysisperformer.py  test_fileutil.py  test_projectstructure.py  test_scoperesolver.py  test_searching.py  test_sqlinjection.py  testutil.py
tests/resources/: sql_injection_vul7.py  sql_injection_vul8.py
tests/resources/demo/backend/: app.py  vul.py  vul_wrapper.py
tests/resources/demo2/demonstration/: model.py
tests/resources/flask_webgoat/: __init__.py
tests/resources/type_demo/: app.py  create_db.py  quick.py  sample.db  user_db_handler.py  vul.py  vul_wrapper.py
tests/resources/webgoat/flask_webgoat/: __init__.py  ui.py
tests/resources/webgoat/flask_webgoat/templates/: __init__.py  hello.py  helper.py
